--- a/client/css/style.css
+++ b/client/css/style.css
@@ -4,3 +4,18 @@
 	display:block;
 	margin:5px;
 }
+
+#stream {
+	margin-top:10px;
+}
+
+#log {
+	width:300px;
+	height:150px;
+	margin:0 auto;
+	background-color:black;
+	color:greenyellow;
+	font-family: monospace;
+	position:absolute;
+	margin: 5px 5px;
+}
